# robust-maturin-demo

./: .cookiecutter.json  .coveragerc  .cruft.json  .cz.toml  .env  CHANGELOG.md  example.yml  noxfile.py  pyproject.toml
.github/workflows/: build-rust.yml  lint-rust.yml  test-rust.yml
docs/: conf.py  contributing.md  reference.md  usage.md
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: bump-version.py  get-release-notes.py  setup-release.py
src/robust_maturin_demo/: __init__.py  __main__.py
tests/: __init__.py
tests/acceptance_tests/: __init__.py
tests/integration_tests/: __init__.py
tests/unit_tests/: __init__.py  test_main.py
